Added the motivation of this project

--- a/readme
+++ b/readme
@@ -1,2 +1,5 @@
-This is a README file for YogaWebsite, my side project.
+The goal of this project is to brush up my web development skill and to experiment new things that I learn in the process of doing so.
 
+The idea is that I want to build a full functioning website for a friend of mine so he can use it for his business. His business is to provide yoga classes.
+
+I am yet to find out all the requirements from him. In the meantime, I am just putting things based on my best knowledge of providing yoga classes.
